--- a/src/catalog.html
+++ b/src/catalog.html
@@ -66,14 +66,16 @@
   </header>
 
   <main class="page-main">
-    <h1 class="page-main__title">Каталог товаров</h1>
+    <header class="page-main__header">
+      <h1 class="page-main__title">Каталог товаров</h1>
+    </header>
 
     <div class="content-wrapper">
-      <section class="page-main__catalog">
+      <section class="catalog">
         <h2 class="visually-hidden">Наша продукция</h2>
 
-        <article class="card-product">
-          <a class="card-product__link card-product__link--image" href="#">
+        <article class="card-product catalog__card-product">
+          <a class="card-product__link-image" href="#">
             <picture>
               <source type="image/webp" media="(min-width: 1150px)" srcset="img/content/photo-hare-desktop@1x.webp 1x, img/content/photo-hare-desktop@2x.webp 2x">
               <source type="image/webp" media="(min-width: 768px)" srcset="img/content/photo-hare-tablet@1x.webp 1x, img/content/photo-hare-tablet@2x.webp 2x">
@@ -95,7 +97,7 @@
             <div class="card-product__price-wrapper">
               <p class="card-product__price">1 200 руб.</p>
               <a class="card-product__button" href="#" aria-label="Добавить в корзину">
-                <svg class="card-product__image" width="20" height="19">
+                <svg class="card-product__button-image" width="20" height="19">
                   <use xlink:href="img/symbols.svg#icon-cart"></use>
                 </svg>
               </a>
@@ -103,8 +105,8 @@
           </div>
         </article>
 
-        <article class="card-product">
-          <a class="card-product__link card-product__link--image" href="#">
+        <article class="card-product catalog__card-product">
+          <a class="card-product__link-image" href="#">
             <picture>
               <source type="image/webp" media="(min-width: 1150px)" srcset="img/content/photo-bowl-desktop@1x.webp 1x, img/content/photo-bowl-desktop@2x.webp 2x">
               <source type="image/webp" media="(min-width: 768px)" srcset="img/content/photo-bowl-tablet@1x.webp 1x, img/content/photo-bowl-tablet@2x.webp 2x">
@@ -126,7 +128,7 @@
             <div class="card-product__price-wrapper">
               <p class="card-product__price">690 руб.</p>
               <a class="card-product__button" href="#" aria-label="Добавить в корзину">
-                <svg class="card-product__image" width="20" height="19">
+                <svg class="card-product__button-image" width="20" height="19">
                   <use xlink:href="img/symbols.svg#icon-cart"></use>
                 </svg>
               </a>
@@ -134,8 +136,8 @@
           </div>
         </article>
 
-        <article class="card-product">
-          <a class="card-product__link card-product__link--image" href="#">
+        <article class="card-product catalog__card-product">
+          <a class="card-product__link-image" href="#">
             <picture>
               <source type="image/webp" media="(min-width: 1150px)" srcset="img/content/photo-toys-desktop@1x.webp 1x, img/content/photo-toys-desktop@2x.webp 2x">
               <source type="image/webp" media="(min-width: 768px)" srcset="img/content/photo-toys-tablet@1x.webp 1x, img/content/photo-toys-tablet@2x.webp 2x">
@@ -157,7 +159,7 @@
             <div class="card-product__price-wrapper">
               <p class="card-product__price">1 500 руб.</p>
               <a class="card-product__button" href="#" aria-label="Добавить в корзину">
-                <svg class="card-product__image" width="20" height="19">
+                <svg class="card-product__button-image" width="20" height="19">
                   <use xlink:href="img/symbols.svg#icon-cart"></use>
                 </svg>
               </a>
@@ -169,18 +171,21 @@
       <section class="page-main__video video">
         <h2 class="video__title">Процесс производства</h2>
 
-        <video class="video__content" width="260" height="150">
-          <source src="video/video.ogv" type="video/ogg">
-          <source src="video/video.mp4" type="video/mp4">
-          <source src="video/video.webm" type="video/webm">
-        </video>
+        <div class="video__content-wrapper">
+          <video class="video__content" width="258" height="150">
+            <source src="video/video.ogv" type="video/ogg">
+            <source src="video/video.mp4" type="video/mp4">
+            <source src="video/video.webm" type="video/webm">
+          </video>
 
-        <button class="video__play" type="button" aria-label="Воспроизвести"></button>
+          <button class="video__play-button" type="button" aria-label="Воспроизвести"></button>
+        </div>
 
-        <p class="video__description">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как
-          появляются наши товары.</p>
-
-        <a class="video__button button" href="#">Сделать заказ</a>
+        <div class="video__block-wrapper">
+          <p class="video__description">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том,
+            как появляются наши товары.</p>
+          <a class="video__button button" href="#">Сделать заказ</a>
+        </div>
       </section>
     </div>
   </main>
@@ -228,24 +233,26 @@
     </div>
   </footer>
 
-  <form class="form-cart page__form-cart" action="https://echo.htmlacademy.ru" method="POST">
-    <h2 class="form-cart__title">Добавить в корзину</h2>
+  <div class="modal-overlay page__overlay">
+    <form class="form-cart modal-overlay__form-cart" action="https://echo.htmlacademy.ru" method="POST">
+      <h2 class="form-cart__title">Добавить в корзину</h2>
 
-    <fieldset class="form-cart__fieldset">
-      <legend class="form-cart__legend">Выберите размер:</legend>
+      <fieldset class="form-cart__fieldset">
+        <legend class="form-cart__legend">Выберите размер:</legend>
 
-      <input class="form-cart__radio visually-hidden" type="radio" id="size-s" name="size" value="1" checked>
-      <label for="size-s" class="form-cart__label">S</label>
-      <input class="form-cart__radio visually-hidden" type="radio" id="size-m" name="size" value="2">
-      <label for="size-m" class="form-cart__label">M</label>
-      <input class="form-cart__radio visually-hidden" type="radio" id="size-l" name="size" value="3">
-      <label for="size-l" class="form-cart__label">L</label>
-    </fieldset>
+        <div class="form-cart__input-wrapper">
+          <input class="form-cart__radio visually-hidden" type="radio" id="size-s" name="size" value="1" checked>
+          <label class="form-cart__label" for="size-s">S</label>
+          <input class="form-cart__radio visually-hidden" type="radio" id="size-m" name="size" value="2">
+          <label class="form-cart__label" for="size-m">M</label>
+          <input class="form-cart__radio visually-hidden" type="radio" id="size-l" name="size" value="3">
+          <label class="form-cart__label" for="size-l">L</label>
+        </div>
+      </fieldset>
 
-    <button class="form-cart__button button button--green" type="submit">Добавить</button>
-  </form>
-
-  <div class="modal-overlay"></div>
+      <button class="form-cart__button button button--green" type="submit">Добавить</button>
+    </form>
+  </div>
 
   <script src="js/svg4everybody.min.js"></script>
   <script src="js/picturefill.min.js"></script>
