--- a/src/form.html
+++ b/src/form.html
@@ -35,15 +35,15 @@
 
       <ul class="main-nav__user-list user-navigation">
         <li class="user-navigation__item">
-          <a class="user-navigation__link" href="#">
+          <a class="user-navigation__link user-navigation__link--search" href="#">
             <svg class="user-navigation__link-image" width="18" height="18">
               <use xlink:href="img/symbols.svg#icon-search"></use>
             </svg>
-            Поиск по сайту
+            <span class="user-navigation__link-text">Поиск по сайту</span>
           </a>
         </li>
         <li class="user-navigation__item">
-          <a class="user-navigation__link" href="#">
+          <a class="user-navigation__link user-navigation__link--cart" href="#">
             <svg class="user-navigation__link-image" width="20" height="19">
               <use xlink:href="img/symbols.svg#icon-cart"></use>
             </svg>
@@ -207,7 +207,7 @@
   </main>
 
   <footer class="page-footer">
-    <div class="content-wrapper">
+    <div class="page-footer__content-wrapper content-wrapper">
       <a class="page-footer__logo footer-logo" aria-label="Мишка">
         <svg class="footer-logo__image" width="102" height="34">
           <use xlink:href="img/symbols.svg#logo-footer"></use>
