--- a/src/form.html
+++ b/src/form.html
@@ -80,7 +80,7 @@
             <span class="form-feedback__legend-text">Тип</span>
           </legend>
 
-          <div class="form-feedback__content-wrapper form-feedback__content-wrapper--type">
+          <div class="form-feedback__content-wrapper">
             <p class="form-feedback__input-wrapper form-feedback__input-wrapper--type">
               <input class="form-feedback__radio visually-hidden" type="radio" id="interior" name="type" value="1"
                 checked>
@@ -95,7 +95,7 @@
         </fieldset>
       </div>
 
-      <div class="form-feedback__block-wrapper">
+      <div class="form-feedback__block-wrapper form-feedback__block-wrapper--gray">
         <fieldset class="form-feedback__fieldset form-feedback__fieldset--color content-wrapper">
           <legend class="form-feedback__legend">
             <span class="form-feedback__legend-text">Цвет</span>
@@ -162,23 +162,23 @@
         </fieldset>
       </div>
 
-      <div class="form-feedback__block-wrapper">
+      <div class="form-feedback__block-wrapper form-feedback__block-wrapper--gray">
         <fieldset class="form-feedback__fieldset form-feedback__fieldset--contact content-wrapper">
           <div class="form-feedback__content-wrapper">
+            <label class="form-feedback__legend form-feedback__legend--phone" for="phone">
+              <span class="form-feedback__legend-text">Тел</span>
+            </label>
             <p class="form-feedback__input-wrapper form-feedback__input-wrapper--contact">
-              <label class="form-feedback__legend form-feedback__legend--contact" for="phone">
-                <span class="form-feedback__legend-text">Тел</span>
-              </label>
-              <input class="form-feedback__input-text" type="tel" id="phone" name="phone" placeholder="+7 ХХХ ХХ ХХ*">
+              <input class="form-feedback__input-text" type="tel" id="phone" name="phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
               <svg class="form-feedback__input-image form-feedback__input-image--phone" width="25" height="24">
                 <use xlink:href="img/symbols.svg#icon-phone"></use>
               </svg>
             </p>
 
+            <label class="form-feedback__legend form-feedback__legend--email" for="email">
+              <span class="form-feedback__legend-text">E-mail</span>
+            </label>
             <p class="form-feedback__input-wrapper form-feedback__input-wrapper--contact">
-              <label class="form-feedback__legend form-feedback__legend--contact" for="email">
-                <span class="form-feedback__legend-text">E-mail</span>
-              </label>
               <input class="form-feedback__input-text" type="email" id="email" name="email" placeholder="Ваш Email*">
               <svg class="form-feedback__input-image form-feedback__input-image--email" width="32" height="32">
                 <use xlink:href="img/symbols.svg#icon-mail"></use>
@@ -194,7 +194,9 @@
             <span class="form-feedback__legend-text">Доп</span>
           </legend>
 
-          <textarea class="form-feedback__input-text form-feedback__textarea" name="message" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+          <div class="form-feedback__content-wrapper">
+            <textarea class="form-feedback__input-text form-feedback__textarea" name="message" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+          </div>
         </fieldset>
 
         <div class="form-feedback__submit-wrapper content-wrapper">
