--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="page">
-  <header class="page-header">
+  <header class="page-header page-header--index">
     <nav class="main-nav main-nav--no-js">
       <div class="main-nav__logo-wrapper">
         <a class="main-nav__logo header-logo" aria-label="Мишка">
@@ -24,7 +24,7 @@
         <button class="main-nav__toggle main-nav__toggle--off" type="button" aria-label="Меню"></button>
       </div>
 
-      <ul class="main-nav__site-list site-navigation site-navigation--index">
+      <ul class="main-nav__site-list site-navigation">
         <li class="site-navigation__item">
           <a class="site-navigation__link" href="catalog.html">Каталог товаров</a>
         </li>
@@ -61,7 +61,7 @@
         </li>
       </ul>
 
-      <p class="main-nav__text main-nav__text--index">Бесплатная доставка по России</p>
+      <p class="main-nav__text">Бесплатная доставка по России</p>
     </nav>
   </header>
 
