--- a/src/form.html
+++ b/src/form.html
@@ -21,7 +21,7 @@
           </picture>
         </a>
 
-        <button class="main-nav__toggle main-nav__toggle--off" type="button" aria-label="Меню"></button>
+        <button class="main-nav__toggle main-nav__toggle--off" id="toggle-button" type="button" aria-label="Меню"></button>
       </div>
 
       <ul class="main-nav__site-list site-navigation">
